Adding: Transaction Swagger and checkFieldTransaction  Middleware
